tests/ui/derive-invariant/helper-side-effect/expected
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
   |
|     #[safety_constraint({*(x.as_mut()) = 0; true})]
   |                            ^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider specifying this binding's type
   |
|     x: &mut std::boxed::Box<i32>: Box<i32>,
   |      +++++++++++++++++++++++++++
